<resources>
    <string name="app_name">D sarees</string>
    <string name="heading">D sarees</string>
    <string name="content1">21 Galleries Lafayette, Lyon 69003</string>
    <string name="content2">+33 750000000</string>
    <string name="content3">dsarees@gmail.com</string>
    <string name="content4">Monday to Friday, 9:00 - 17:00</string>
    <string name="content5">D sarees presents a timeless collection of sarees in equisite colors and motifs inspired by the indigenous art of different regions of India</string>
</resources>
